# gradrts

./: .gitignore  README.md  pyproject.toml
analysis/: holistic_fp_analysis.py  holistic_global_edf_analysis.py  holistic_local_edf_analysis.py  holistic_local_edf_analysis.pyi
assignment/: assignments.py  bf_assignment.py  hopa_assignment.py  pd_assignment.py
examples/: evaluation.py  example_models.py  examples_special.py  generator.py  tuner.py
gradient_descent/: cost_functions.py  gradient_function.py  gradient_optimizer.py  interfaces.py  parameter_handlers.py  stop_functions.py  update_functions.py
model/: analysis_function.py  linear_system.py  linear_system_utils.py  system_model.py
tests/: test_bf_assignment.py  test_gradient_fp.py  test_holistic_fp_analysis.py  test_unbalance_contended.py
vector/: __init__.py  vector_fp.py
workspace/fp-mapping-only-debug/: diagnose_plateaus.py
workspace/framework_paper/: charts.py
workspace/gradient_edf_local_mapping_validation/: gradient_edf_local_mapping_val.py
workspace/gradient_edf_local_validation/: gradient_edf_local_val.py  gradient_edf_local_validation_schedulables.xlsx  gradient_edf_local_validation_times.xlsx
workspace/gradient_fp_mapping_validation/: gradient_fp_mapping_val.py  gradient_fp_mapping_validation_schedulables.xlsx  gradient_fp_mapping_validation_times.xlsx  mapping-validation.py
workspace/gradient_fp_validation/: gradient_fp_val.py  gradient_fp_validation_schedulables.xlsx  gradient_fp_validation_times.xlsx
workspace/stuck-diagnosis/: diagnose_bf.py  diagnose_stuck.py
(+16 files in other folders)
