[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gradrts"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.4",
    "matplotlib>=3.9",
    "pandas>=3.0",
    "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
